started contact.html

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,18 @@
     <!--CONTENT-->
     <div class="body-wrapper">
         <div class="center-content">
-            <h1 class="main-title">Contact</h1>
+            <h1 class="main-title">Contacts</h1>
+            <div class="contact-container">
+                <form>
+                    <input type="text" placeholder="Name" />
+                    <input type="email" placeholder="Email" />
+                    <input type="text" placeholder="Subject" />
+                    <textarea type="text" placeholder="Message"></textarea>
+                    <div class="button-message">
+                        <button class="cta-main" type="submit">Send</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
