--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,16 @@
 
     <!--CONTENT-->
     <div class="body-wrapper">
-        <div class="center-content">
-            <h1 class="main-title">Contacts</h1>
+        <div class="center-contacts">
+            <h1 class="main-title">Contact me</h1>
+            <p class="posts-pg">Anything you want to ask?</p>
+            <p class="posts-pg">Feel free to fill the form or reach out through my socials!</p>
+            <div class="socials">
+                <a href="https://www.facebook.com/"><img src="images/fb.svg" \></a>
+                <a href="https://www.instagram.com/"><img src="images/instagram.svg" \></a>
+                <a href="https://www.youtube.com/"><img src="images/youtube.svg" \></a>
+                <a href="https://www.twitter.com/"><img src="images/twitter.svg" \></a>
+            </div>
             <div class="contact-container">
                 <form>
                     <input type="text" placeholder="Name" />
