adding media queries - responsive in every screen

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                             everyone the charming city who I call home for almost 4 years: Bergen.
                         </p>
                         <p>
-                            Because Bergen is mostly known by being very rainy and dark, I decided to create a blog who
+                            Because Bergen is mostly known for being very rainy and dark, I decided to create a blog who
                             tells a bit more about its story, weather, curiosities around the city, its traditions,
                             places
                             to visit and people! I want to show Bergen behond the rain!</p>
@@ -58,7 +58,7 @@
 
                 <div class="about-right">
                     <img src="images/aboutimage.jpg">
-                    <p>Me, on top of a mountain,</p>
+                    <p>Me, on top of Fjellfesten,</p>
                     <p>doing the treepose.</p>
                     <p>02/2021</p>
                 </div>
