contact form validation and error catching

--- a/single.html
+++ b/single.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="specific post page" />
+    <meta name="keywords" content="specific, single, post, details" />
+    <meta name="author" content="Roxanne Franco" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>MyBergen | Single Post</title>
+    <title>MyBergen | A Single Post</title>
 </head>
 
 <body>
