--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Page about blog and author" />
+    <meta name="keywords" content="about blog, bio, details, blog author" />
+    <meta name="author" content="Roxanne Franco" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>MyBergen | About</title>
 </head>
@@ -58,7 +61,7 @@
 
                 <div class="about-right">
                     <img src="images/aboutimage.jpg">
-                    <p>Me, on top of Fjellfesten,</p>
+                    <p>Me, on top of Fjell Festning,</p>
                     <p>doing the treepose.</p>
                     <p>02/2021</p>
                 </div>
