--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact page with form" />
+    <meta name="keywords" content="contact, form, support, phone, email, socials" />
+    <meta name="author" content="Roxanne Franco" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>MyBergen | Contact</title>
 </head>
@@ -47,14 +50,16 @@
                 <a href="https://www.twitter.com/"><img src="images/twitter.svg" \></a>
             </div>
             <div class="contact-container">
-                <form>
-                    <input type="text" placeholder="Name" />
-                    <input type="email" placeholder="Email" />
-                    <input type="text" placeholder="Subject" />
-                    <textarea type="text" placeholder="Message"></textarea>
+                <div id="success"></div>
+                <form id="contact-form">
+                    <input id="name" type="text" placeholder="Name" />
+                    <input id="email" type="email" placeholder="Email" />
+                    <input id="subject" type="text" placeholder="Subject" />
+                    <textarea id="textarea" type="text" placeholder="Message"></textarea>
                     <div class="button-message">
                         <button class="cta-main" type="submit">Send</button>
                     </div>
+                    <ul id="errors"></ul>
                 </form>
             </div>
         </div>
@@ -65,6 +70,7 @@
         <div class="footer-line"></div>
         <p>All rights reserved &copy; 2022</p>
     </footer>
+    <script src="js/contact.js" type="module"></script>
 </body>
 
 </html>
