--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="blog homepage" />
+  <meta name="keywords" content="homepage, home, blog, header, welcome, slider, latest" />
+  <meta name="author" content="Roxanne Franco" />
   <link rel="stylesheet" href="./css/styles.css" />
   <title>MyBergen | Home</title>
 </head>
