menu mobile using with js

--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,10 @@
                     </li>
                 </ul>
             </nav>
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
+                    src="images/menu.svg">
+            </div>
         </div>
-
     </div>
 
     <!--CONTENT-->
@@ -70,6 +72,7 @@
         <div class="footer-line"></div>
         <p>All rights reserved &copy; 2022</p>
     </footer>
+    <script src="js/index.js"></script>
     <script src="js/contact.js" type="module"></script>
 </body>
 
