--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li>
-                        <a class="active" href="#">About</a>
+                        <a class="active" href="about.html">About</a>
                     </li>
                     <li>
                         <a href="posts.html">Posts</a>
@@ -33,8 +33,10 @@
                     </li>
                 </ul>
             </nav>
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
+                    src="images/menu.svg">
+            </div>
         </div>
-
     </div>
 
     <!--CONTENT-->
@@ -48,7 +50,8 @@
                             everyone the charming city who I call home for almost 4 years: Bergen.
                         </p>
                         <p>
-                            Because Bergen is mostly known for being very rainy and dark, I decided to create a blog who
+                            Because Bergen is mostly known for being very rainy and dark, I decided to create a blog
+                            who
                             tells a bit more about its story, weather, curiosities around the city, its traditions,
                             places
                             to visit and people! I want to show Bergen behond the rain!</p>
@@ -75,6 +78,7 @@
         <div class="footer-line"></div>
         <p>All rights reserved &copy; 2022</p>
     </footer>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
