--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           </li>
         </ul>
       </nav>
+      <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open" src="images/menu.svg">
+      </div>
     </div>
 
   </div>
@@ -43,7 +45,6 @@
       <img class="home-image" src="images/francois-olwage-X_RxDiKDSuU-unsplash.jpg" alt="people hiking in Bergen" />
       <div class="main-title"><span>Welcome to the best travel guide blog for the city of Bergen!</span></div>
     </div>
-
     <div class="center-content">
       <h1 class="main-title">Latest Posts</h1>
       <div class="carousel">
@@ -130,6 +131,7 @@
     <div class="footer-line"></div>
     <p>All rights reserved &copy; 2022</p>
   </footer>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
