--- a/posts.html
+++ b/posts.html
@@ -26,13 +26,16 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a class="active" href="#">Posts</a>
+                        <a class="active" href="posts.html">Posts</a>
                     </li>
                     <li>
                         <a href="contact.html">Contacts</a>
                     </li>
                 </ul>
             </nav>
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
+                    src="images/menu.svg">
+            </div>
         </div>
 
     </div>
@@ -110,6 +113,7 @@
         <div class="footer-line"></div>
         <p>All rights reserved &copy; 2022</p>
     </footer>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
