--- a/single.html
+++ b/single.html
@@ -33,8 +33,10 @@
                     </li>
                 </ul>
             </nav>
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
+                    src="images/menu.svg">
+            </div>
         </div>
-
     </div>
 
     <!--CONTENT-->
@@ -47,18 +49,23 @@
             <div class="border-image"><img src="images/singlepostimage.jpg" alt="bryggen in Bergen" />
             </div>
             <div class="single-center">
-                <p class="posts-pg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel sollicitudin a sagittis
+                <p class="posts-pg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel sollicitudin a
+                    sagittis
                     non. Risus in nunc,
-                    tempor nulla amet volutpat. Semper eu mattis congue fusce tincidunt in consectetur. Porttitor varius
+                    tempor nulla amet volutpat. Semper eu mattis congue fusce tincidunt in consectetur. Porttitor
+                    varius
                     dui
                     mi at nulla donec risus integer blandit. Turpis vitae purus fermentum, pretium varius pulvinar
                     euismod
-                    cras. Massa a nibh praesent in vel. Massa, quis libero sit sit suspendisse varius ultrices sed.</p>
+                    cras. Massa a nibh praesent in vel. Massa, quis libero sit sit suspendisse varius ultrices sed.
+                </p>
                 <p class="posts-pg">Tincidunt id phasellus vestibulum, porttitor feugiat netus. Tincidunt sit
                     pellentesque
                     condimentum donec
-                    sed quis molestie. Nulla mus libero condimentum faucibus tempus sit. Scelerisque arcu pulvinar diam
-                    viverra nunc vitae, viverra netus. Vestibulum vulputate consequat sit non lorem maecenas condimentum
+                    sed quis molestie. Nulla mus libero condimentum faucibus tempus sit. Scelerisque arcu pulvinar
+                    diam
+                    viverra nunc vitae, viverra netus. Vestibulum vulputate consequat sit non lorem maecenas
+                    condimentum
                     fames scelerisque. Auctor tellus nunc, integer morbi lacus morbi quis tellus. Nisl amet nec arcu
                     viverra
                     at vel.</p>
@@ -66,13 +73,15 @@
                     lobortis
                     a. Lorem elit
                     nibh eu urna. Sit dignissim cursus tellus posuere tempor amet gravida urna. In faucibus dictumst
-                    praesent enim. Auctor et id blandit purus adipiscing in dolor. Mi nulla dignissim montes, phasellus
+                    praesent enim. Auctor et id blandit purus adipiscing in dolor. Mi nulla dignissim montes,
+                    phasellus
                     elementum mi velit. Maecenas vitae at morbi nunc eget viverra magna tincidunt proin. Amet sit
                     viverra ut
                     tristique tellus tincidunt. At vel non congue nunc viverra urna habitasse lacus, enim. Mattis
                     feugiat id
                     amet, purus nisi ullamcorper. Egestas pretium ultrices in libero volutpat nunc netus.</p>
-                <p class="posts-pg">Eleifend ullamcorper viverra vulputate suspendisse scelerisque lacus at. Condimentum
+                <p class="posts-pg">Eleifend ullamcorper viverra vulputate suspendisse scelerisque lacus at.
+                    Condimentum
                     aliquam enim risus
                     fames diam vestibulum. Lectus cursus id sit tempus euismod aenean nisl. Auctor pretium malesuada
                     curabitur enim sit mi sit tellus. Elit et penatibus amet eleifend placerat in. Placerat cras mus
@@ -80,13 +89,18 @@
                 <p class="posts-pg">
                     Eu tortor mattis augue leo nisl nulla viverra urna amet. Tincidunt placerat hendrerit vitae diam
                     lectus
-                    consectetur tristique faucibus massa. Imperdiet ultricies mattis faucibus laoreet cursus phasellus
-                    cursus purus tincidunt. Placerat tempus erat donec faucibus ornare blandit. At lectus feugiat ipsum
+                    consectetur tristique faucibus massa. Imperdiet ultricies mattis faucibus laoreet cursus
+                    phasellus
+                    cursus purus tincidunt. Placerat tempus erat donec faucibus ornare blandit. At lectus feugiat
+                    ipsum
                     orci
-                    mi in tortor porttitor justo. Maecenas nulla consectetur massa quam eget eros, sed vel quam. Quis eu
-                    massa etiam feugiat facilisis vulputate tincidunt volutpat. Accumsan felis fermentum, tortor sed.
+                    mi in tortor porttitor justo. Maecenas nulla consectetur massa quam eget eros, sed vel quam.
+                    Quis eu
+                    massa etiam feugiat facilisis vulputate tincidunt volutpat. Accumsan felis fermentum, tortor
+                    sed.
                     Rutrum
-                    lectus mi sed viverra eget aliquet eu vel a. Ipsum euismod vehicula consequat sem vitae magna a leo.
+                    lectus mi sed viverra eget aliquet eu vel a. Ipsum euismod vehicula consequat sem vitae magna a
+                    leo.
                     Dui
                     rutrum in cursus ac nibh egestas. Urna arcu blandit amet, dui et id mattis tempor. Est etiam
                     vestibulum
@@ -102,6 +116,7 @@
         <div class="footer-line"></div>
         <p>All rights reserved &copy; 2022</p>
     </footer>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
