form validation with js

--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,13 @@
                 <div id="success"></div>
                 <form id="contact-form">
                     <input id="name" type="text" placeholder="Name" />
+                    <span class="name-error error-message"></span>
                     <input id="email" type="email" placeholder="Email" />
+                    <span class="email-error error-message"></span>
                     <input id="subject" type="text" placeholder="Subject" />
+                    <span class="subject-error error-message"></span>
                     <textarea id="textarea" type="text" placeholder="Message"></textarea>
+                    <span class="textarea-error error-message"></span>
                     <div class="button-message">
                         <button class="cta-main" type="submit">Send</button>
                     </div>
