--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <div class="footer-line"></div>
         <p>All rights reserved &copy; 2022</p>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/site.js"></script>
 </body>
 
 </html>
