--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
         <div class="footer-line"></div>
         <p>All rights reserved &copy; 2022</p>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/site.js"></script>
     <script src="js/contact.js" type="module"></script>
 </body>
 
