--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta name="description" content="blog homepage" />
   <meta name="keywords" content="homepage, home, blog, header, welcome, slider, latest" />
   <meta name="author" content="Roxanne Franco" />
+  <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 3182971, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
   <link rel="stylesheet" href="./css/styles.css" />
   <title>MyBergen | Home</title>
 </head>
