--- a/posts.html
+++ b/posts.html
@@ -56,6 +56,7 @@
         <div class="center-content">
             <h1 class="main-title">Posts</h1>
             <div class="posts-container">
+                <div class="loader"></div>
             </div>
             <div class="all-posts-cta">
                 <button class="cta-main" href="#">More Posts</button>
