--- a/single.html
+++ b/single.html
@@ -53,6 +53,10 @@
     <!--CONTENT-->
     <div class="body-wrapper">
         <div id="single-post" class="center-content">
+            <div class="loader"></div>
+        </div>
+        <div class="all-posts-cta center-content back-cta">
+            <a class="cta-main" href="posts.html">Back to Posts</a>
         </div>
     </div>
 
