--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="blog homepage" />
-  <meta name="keywords" content="homepage, home, blog, header, welcome, slider, latest" />
-  <meta name="author" content="Roxanne Franco" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="blog homepage">
+  <meta name="keywords" content="homepage, home, blog, header, welcome, slider, latest">
+  <meta name="author" content="Roxanne Franco">
   <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -19,7 +19,7 @@
       a.appendChild(r);
     })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
   </script>
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css">
   <title>MyBergen | Home</title>
 </head>
 
@@ -44,7 +44,8 @@
           </li>
         </ul>
       </nav>
-      <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open" src="images/menu.svg">
+      <div class="menu-mobile-buttons"><img class="close" src="images/x.svg" alt="close icon"><img class="open"
+          src="images/menu.svg" alt="hamburguer menu icon">
       </div>
     </div>
 
@@ -53,7 +54,7 @@
   <!--CONTENT-->
   <div class="body-wrapper">
     <div class="header-section">
-      <img class="home-image" src="images/francois-olwage-X_RxDiKDSuU-unsplash.jpg" alt="people hiking in Bergen" />
+      <img class="home-image" src="images/francois-olwage-X_RxDiKDSuU-unsplash.jpg" alt="people hiking in Bergen">
       <div class="main-title"><span>Welcome to the best travel guide blog for the city of Bergen!</span></div>
     </div>
     <div class="center-content">
@@ -63,8 +64,8 @@
 
       </div>
       <div class="home-buttons">
-        <button class="slider prev" href="#"><img src="images/chevron-left.svg" alt="left chefron" /></button>
-        <button class="slider next" href="#"><img src="images/chevron-right.svg" /></button>
+        <button class="slider prev"><img src="images/chevron-left.svg" alt="left chefron"></button>
+        <button class="slider next"><img src="images/chevron-right.svg"></button>
         <a class="cta-main" href="posts.html"><span>All Posts</span><svg width="16" height="16" viewBox="0 0 16 16"
             fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_58_359)">
