--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="blog homepage">
@@ -28,7 +28,7 @@
   <div class="nav-bar">
     <div class="center-content">
       <div class="logo">
-        <a href="index.html"><img src="images/Logo.svg" alt="logo" /></a>
+        <a href="index.html"><img src="images/Logo.svg" alt="logo"></a>
       </div>
       <nav class="menu">
         <ul>
@@ -65,7 +65,7 @@
       </div>
       <div class="home-buttons">
         <button class="slider prev"><img src="images/chevron-left.svg" alt="left chefron"></button>
-        <button class="slider next"><img src="images/chevron-right.svg"></button>
+        <button class="slider next"><img src="images/chevron-right.svg" alt="right chefron"></button>
         <a class="cta-main" href="posts.html"><span>All Posts</span><svg width="16" height="16" viewBox="0 0 16 16"
             fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_58_359)">
