--- a/posts.html
+++ b/posts.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="all blog posts page" />
-    <meta name="keywords" content="blog, posts, list, complete" />
-    <meta name="author" content="Roxanne Franco" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="all blog posts page">
+    <meta name="keywords" content="blog, posts, list, complete">
+    <meta name="author" content="Roxanne Franco">
     <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -19,7 +19,7 @@
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>MyBergen | Posts</title>
 </head>
 
@@ -28,7 +28,7 @@
     <div class="nav-bar">
         <div class="center-content">
             <div class="logo">
-                <a href="index.html"><img src="images/Logo.svg" alt="logo" /></a>
+                <a href="index.html"><img src="images/Logo.svg" alt="logo"></a>
             </div>
             <nav class="menu">
                 <ul>
@@ -44,8 +44,8 @@
                     </li>
                 </ul>
             </nav>
-            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
-                    src="images/menu.svg">
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg" alt="close icon"><img class="open"
+                    src="images/menu.svg" alt="hamburguer menu icon">
             </div>
         </div>
 
@@ -59,7 +59,7 @@
                 <div class="loader"></div>
             </div>
             <div class="all-posts-cta">
-                <button class="cta-main" href="#">More Posts</button>
+                <button class="cta-main">More Posts</button>
             </div>
         </div>
     </div>
