--- a/single.html
+++ b/single.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="specific post page" />
-    <meta name="keywords" content="specific, single, post, details" />
-    <meta name="author" content="Roxanne Franco" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="specific post page">
+    <meta name="keywords" content="specific, single, post, details">
+    <meta name="author" content="Roxanne Franco">
     <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -28,7 +28,7 @@
     <div class="nav-bar">
         <div class="center-content">
             <div class="logo">
-                <a href="index.html"><img src="images/Logo.svg" alt="logo" /></a>
+                <a href="index.html"><img src="images/Logo.svg" alt="logo"></a>
             </div>
             <nav class="menu">
                 <ul>
@@ -44,8 +44,8 @@
                     </li>
                 </ul>
             </nav>
-            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
-                    src="images/menu.svg">
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg" alt="close icon"><img class="open"
+                    src="images/menu.svg" alt="hamburguer menu icon">
             </div>
         </div>
     </div>
