--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Page about blog and author" />
-    <meta name="keywords" content="about blog, bio, details, blog author" />
-    <meta name="author" content="Roxanne Franco" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Page about blog and author">
+    <meta name="keywords" content="about blog, bio, details, blog author">
+    <meta name="author" content="Roxanne Franco">
     <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -19,7 +19,7 @@
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>MyBergen | About</title>
 </head>
 
@@ -28,7 +28,7 @@
     <div class="nav-bar">
         <div class="center-content">
             <div class="logo">
-                <a href="index.html"><img src="images/Logo.svg" alt="logo" /></a>
+                <a href="index.html"><img src="images/Logo.svg" alt="logo"></a>
             </div>
             <nav class="menu">
                 <ul>
@@ -44,8 +44,8 @@
                     </li>
                 </ul>
             </nav>
-            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
-                    src="images/menu.svg">
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg" alt="close icon"><img class="open"
+                    src="images/menu.svg" alt="hamburguer menu icon">
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="about-right">
-                    <img src="images/aboutimage.jpg">
+                    <img src="images/aboutimage.jpg" alt="girl doing yoga pose in nature">
                     <p>Me, on top of Fjell Festning,</p>
                     <p>doing the treepose.</p>
                     <p>02/2021</p>
