--- a/single.html
+++ b/single.html
@@ -19,7 +19,7 @@
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>MyBergen | A Single Post</title>
 </head>
 
