--- a/single.html
+++ b/single.html
@@ -20,7 +20,7 @@
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
     <link rel="stylesheet" href="./css/styles.css">
-    <title>MyBergen | A Single Post</title>
+    <title>MyBergen |</title>
 </head>
 
 <body>
