--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Page about blog and author">
-    <meta name="keywords" content="about blog, bio, details, blog author">
+    <meta name="keywords" content="about, blog, bio, details, blog author">
     <meta name="author" content="Roxanne Franco">
     <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
     <script>
