--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="all blog posts page">
-    <meta name="keywords" content="blog, posts, list, complete">
+    <meta name="keywords" content="blog, posts, list, all posts">
     <meta name="author" content="Roxanne Franco">
     <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
     <script>
